--- a/branches/Mell1eJ/projects/vs2012/PlayerAgent/PlayerAgent.vcxproj.filters
+++ b/branches/Mell1eJ/projects/vs2012/PlayerAgent/PlayerAgent.vcxproj.filters
@@ -17,6 +17,9 @@
     <ClCompile Include="..\..\..\src\PlayerAgent\Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\src\PlayerAgent\PlayerAgentPackets.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\src\PlayerAgent\PlayerConnection.h">
