--- a/branches/Mell1eJ/scripts/FaolanConfig.cfg
+++ b/branches/Mell1eJ/scripts/FaolanConfig.cfg
@@ -17,16 +17,27 @@ DBType = 0
 
 # Count of network demuxer thread
 demuxerCount = 2
+
 characterSlots = 4
+playIntro = false
 
 ######################################################
 
 # Address to listen to
-universeAgentAddress = 127.0.0.1
+universeAgentIPAddress = 127.0.0.1
 # Port to listen to
 universeAgentPort = 7000
 
 # Address to listen to
-playerAgentAddress = 127.0.0.1 
+playerAgentIPAddress = 127.0.0.1 
 # Port to listen to
 playerAgentPort = 7001 
+
+csPlayerAgentIPAddress = "127.0.0.1"
+csPlayerAgentPort = 7002
+
+agentServerIPAddress = "127.0.0.1"
+agentServerPort = 7003
+
+worldServerIPAddress = "127.0.0.1"
+worldServerPort = 7004
