--- a/branches/Mell1eJ/projects/vs2012/PlayerAgent/PlayerAgent.vcxproj
+++ b/branches/Mell1eJ/projects/vs2012/PlayerAgent/PlayerAgent.vcxproj
@@ -7,6 +7,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\src\PlayerAgent\PlayerAgentPackets.cpp" />
     <ClCompile Include="..\..\..\src\PlayerAgent\PlayerConnection.cpp" />
     <ClCompile Include="..\..\..\src\PlayerAgent\Main.cpp" />
   </ItemGroup>
@@ -41,7 +42,7 @@
   <PropertyGroup>
     <_ProjectFileVersion>10.0.30319.1</_ProjectFileVersion>
     <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">..\..\..\build\$(PlatformName)\$(Configuration)\</OutDir>
-    <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">D:\tmp\VC++\$(SolutionName)\$(ProjectName)\$(Configuration)\</IntDir>
+    <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">C:\tmp\VC++\$(SolutionName)\$(ProjectName)\$(Configuration)\</IntDir>
     <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
