--- a/branches/Mell1eJ/scripts/FaolanConfig.cfg
+++ b/branches/Mell1eJ/scripts/FaolanConfig.cfg
@@ -1,43 +1,37 @@
-# DB Username
-DBUsername = root
-# DB password
-DBPassword = toor 
-# DB Host
-DBHost = 127.0.0.1 
-# DB port
-DBPort = 3306 
-# DB name
-DBName = faolan 
-# Number of active connection to the DB server;
-DBConnectionCount = 5 
-#DB Type: 0 = mysql, 1 = ?, 2 = ?, etc
-DBType = 0
+# db username
+dbusername = root
+# db password
+dbpassword = toor 
+# db host
+dbhost = 127.0.0.1 
+# db port
+dbport = 3306 
+# db name
+dbname = faolan 
+# number of active connection to the db server;
+dbconnectioncount = 5 
+#db type: 0 = mysql, 1 = ?, 2 = ?, etc
+dbtype = 0
 
 ######################################################
 
-# Count of network demuxer thread
-demuxerCount = 2
+# count of network demuxer thread
+demuxercount = 2
 
-characterSlots = 4
-playIntro = false
+characterslots = 4
+playintro = false
+
+faolanmanageripaddress = 127.0.0.1
+faolanmanagerport = 5000
 
 ######################################################
 
-# Address to listen to
-universeAgentIPAddress = 127.0.0.1
-# Port to listen to
-universeAgentPort = 7000
+# address to listen to
+universeagentipaddress = 127.0.0.1
+# port to listen to
+universeagentport = 7000
 
-# Address to listen to
-playerAgentIPAddress = 127.0.0.1 
-# Port to listen to
-playerAgentPort = 7001 
-
-csPlayerAgentIPAddress = "127.0.0.1"
-csPlayerAgentPort = 7002
-
-agentServerIPAddress = "127.0.0.1"
-agentServerPort = 7003
-
-worldServerIPAddress = "127.0.0.1"
-worldServerPort = 7004
+# address to listen to
+playeragentipaddress = 127.0.0.1 
+# port to listen to
+playeragentport = 7001
