--- a/branches/Mell1eJ/projects/vs2012/FaolanManager/FaolanManager.vcxproj.filters
+++ b/branches/Mell1eJ/projects/vs2012/FaolanManager/FaolanManager.vcxproj.filters
@@ -11,7 +11,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\src\FaolanManager\Main.cpp">
+    <ClCompile Include="..\..\..\src\FaolanManager\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\src\FaolanManager\ManagerConnection.cpp">
