--- a/projects/vs2010/WorldServer/WorldServer.vcxproj
+++ b/projects/vs2010/WorldServer/WorldServer.vcxproj
@@ -9,14 +9,12 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{66374919-1E7D-49A8-A37C-82F39FA1970C}</ProjectGuid>
     <RootNamespace>WorldServer</RootNamespace>
-    <VCTargetsPath Condition="'$(VCTargetsPath11)' != '' and '$(VSVersion)' == '' and $(VisualStudioVersion) == ''">$(VCTargetsPath11)</VCTargetsPath>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <CharacterSet>MultiByte</CharacterSet>
     <WholeProgramOptimization>false</WholeProgramOptimization>
-    <PlatformToolset>v100</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -28,16 +26,13 @@
   <PropertyGroup>
     <_ProjectFileVersion>10.0.30319.1</_ProjectFileVersion>
     <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">..\..\..\build\$(PlatformName)\$(Configuration)\</OutDir>
-    <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">D:\tmp\VC++\$(SolutionName)\$(ProjectName)\$(Configuration)\</IntDir>
+    <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(Configuration)\</IntDir>
     <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</LinkIncremental>
     <GenerateManifest Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</GenerateManifest>
     <CodeAnalysisRuleSet Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">AllRules.ruleset</CodeAnalysisRuleSet>
     <CodeAnalysisRules Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" />
     <CodeAnalysisRuleAssemblies Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" />
-    <LibraryPath Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">D:\Libraries\mysql-connector-c\lib;D:\Libraries\zlib;$(LibraryPath)</LibraryPath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>D:\Libraries\mysql-connector-c\include;D:\Libraries\zlib;$(IncludePath)</IncludePath>
+    <LibraryPath Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -61,8 +56,6 @@
       <PrecompiledHeaderOutputFile>
       </PrecompiledHeaderOutputFile>
       <CompileAs>CompileAsCpp</CompileAs>
-      <AdditionalIncludeDirectories>
-      </AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <ShowProgress>NotSet</ShowProgress>
@@ -77,26 +70,18 @@
       </EnableCOMDATFolding>
       <TargetMachine>MachineX86</TargetMachine>
       <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>
-      </AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\src\WorldServer\AbilityHandler.cpp" />
     <ClCompile Include="..\..\..\src\WorldServer\CharStatsHandler.cpp" />
-    <ClCompile Include="..\..\..\src\WorldServer\ItemHandler.cpp" />
-    <ClCompile Include="..\..\..\src\WorldServer\Packet\AckAuth.cpp" />
-    <ClCompile Include="..\..\..\src\WorldServer\Packet\Ping.cpp" />
-    <ClCompile Include="..\..\..\src\WorldServer\Packet\ReportID.cpp" />
     <ClCompile Include="..\..\..\src\WorldServer\PassBlobs\CharAction.cpp" />
     <ClCompile Include="..\..\..\src\WorldServer\PassBlobs\CharMovement.cpp" />
     <ClCompile Include="..\..\..\src\WorldServer\PassBlobs\DeleteItem.cpp" />
     <ClCompile Include="..\..\..\src\WorldServer\PassBlobs\LoadBarFull.cpp" />
-    <ClCompile Include="..\..\..\src\WorldServer\PassBlobs\ObjectHandler.cpp" />
     <ClCompile Include="..\..\..\src\WorldServer\PassBlobs\PassblobHandler.cpp" />
     <ClCompile Include="..\..\..\src\WorldServer\PassBlobs\SelectObject.cpp" />
     <ClCompile Include="..\..\..\src\WorldServer\SendPackets\SendPackets.cpp" />
-    <ClCompile Include="..\..\..\src\WorldServer\SpellHandler.cpp" />
     <ClCompile Include="..\..\..\src\WorldServer\WorldServer.cpp" />
     <ClCompile Include="..\..\..\src\WorldServer\CharacterHandler.cpp" />
     <ClCompile Include="..\..\..\src\WorldServer\CombatHandler.cpp" />
