changed packet header. working: login, get Char list, enter world with an existing char.

--- a/projects/vs2010/PlayerAgent/PlayerAgent.vcxproj
+++ b/projects/vs2010/PlayerAgent/PlayerAgent.vcxproj
@@ -85,6 +85,9 @@
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\src\PlayerAgent\header.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
